==> mkasenberg/mynewt-core/hw/mcu/nordic/nrf54h20_rad/src/hal_timer.c <==
#include <string.h>
#include <stdint.h>
#include <assert.h>
#include <errno.h>
#include <os/mynewt.h>
#include <mcu/cmsis_nvic.h>
#include <hal/hal_timer.h>
#include <nrf.h>
#include <mcu/nrf54h20_rad_hal.h>
#define NRF_TIMER_CC_READ       (2)
#define NRF_TIMER_CC_INT        (3)
#define NRF_RTC_TIMER_CC_INT    (2)
#define nrf54h20_hal_timer_MAX   (5)
#define NRF5340_MAX_TIMER_FREQ    (16000000)
#define nrf54h20_hal_timer_RESOLVE(__n, __v)       \
    if ((__n) >= nrf54h20_hal_timer_MAX) {         \
        rc = EINVAL;                            \
        goto err;                               \
    }                                           \
    (__v) = (struct nrf54h20_hal_timer *) nrf54h20_hal_timers[(__n)];            \
    if ((__v) == NULL) {                        \
        rc = EINVAL;                            \
        goto err;                               \
    }
#define NRF_TIMER_INT_MASK(x)    ((1 << (uint32_t)(x)) << TIMER_INTENCLR_COMPARE0_Pos)

int
hal_timer_init(int timer_num, void *cfg)
{
    int rc;
    uint8_t irq_num;
    struct nrf54h20_hal_timer *bsptimer;
    void *hwtimer;
    hal_timer_irq_handler_t irq_isr;
    assert(0);

//     nrf54h20_hal_timer_RESOLVE(timer_num, bsptimer);

//     /* If timer is enabled do not allow init */
//     if (bsptimer->tmr_enabled) {
//         rc = EINVAL;
//         goto err;
//     }

//     switch (timer_num) {
// #if MYNEWT_VAL(TIMER_0)
//     case 0:
//         irq_num = TIMER0_IRQn;
//         hwtimer = NRF_TIMER0_NS;
//         irq_isr = nrf54h20_timer0_irq_handler;
//         break;
// #endif
// #if MYNEWT_VAL(TIMER_1)
//     case 1:
//         irq_num = TIMER1_IRQn;
//         hwtimer = NRF_TIMER1_NS;
//         irq_isr = nrf54h20_timer1_irq_handler;
//         break;
// #endif
// #if MYNEWT_VAL(TIMER_2)
//     case 2:
//         irq_num = TIMER2_IRQn;
//         hwtimer = NRF_TIMER2_NS;
//         irq_isr = nrf54h20_timer2_irq_handler;
//         break;
// #endif
// #if MYNEWT_VAL(TIMER_3)
//     case 3:
//         irq_num = RTC0_IRQn;
//         hwtimer = NRF_RTC0_NS;
//         irq_isr = nrf54h20_timer3_irq_handler;
//         bsptimer->tmr_rtc = 1;
//         break;
// #endif
// #if MYNEWT_VAL(TIMER_4)
//     case 4:
//         irq_num = RTC1_IRQn;
//         hwtimer = NRF_RTC1_NS;
//         irq_isr = nrf54h20_timer4_irq_handler;
//         bsptimer->tmr_rtc = 1;
//         break;
// #endif
//     default:
//         hwtimer = NULL;
//         break;
//     }

//     if (hwtimer == NULL) {
//         rc = EINVAL;
//         goto err;
//     }

//     bsptimer->tmr_reg = hwtimer;
//     bsptimer->tmr_irq_num = irq_num;

//     /* Disable IRQ, set priority and set vector in table */
//     NVIC_DisableIRQ(irq_num);
//     NVIC_SetPriority(irq_num, (1 << __NVIC_PRIO_BITS) - 1);
//     NVIC_SetVector(irq_num, (uint32_t)irq_isr);

    return 0;

// err:
//     return rc;
}

int
hal_timer_config(int timer_num, uint32_t freq_hz)
{
    int rc;
    uint8_t prescaler;
    uint32_t ctx;
    uint32_t div;
    uint32_t min_delta;
    uint32_t max_delta;
    struct nrf54h20_hal_timer *bsptimer;
    NRF_TIMER_Type *hwtimer;
// #if (MYNEWT_VAL(TIMER_3) || MYNEWT_VAL(TIMER_4))
//     NRF_RTC_Type *rtctimer;
// #endif

//     nrf54h20_hal_timer_RESOLVE(timer_num, bsptimer);

// #if (MYNEWT_VAL(TIMER_3) || MYNEWT_VAL(TIMER_4))
//     if ((timer_num == 3) || (timer_num == 4)) {
//         /* NOTE: we only allow the RTC frequency to be set at 32768 */
//         if (bsptimer->tmr_enabled || (freq_hz != 32768) ||
//             (bsptimer->tmr_reg == NULL)) {
//             rc = EINVAL;
//             goto err;
//         }

//         bsptimer->tmr_freq = freq_hz;
//         bsptimer->tmr_enabled = 1;

//         __HAL_DISABLE_INTERRUPTS(ctx);

//         rtctimer = (NRF_RTC_Type *)bsptimer->tmr_reg;

//         /* Stop the timer first */
//         rtctimer->TASKS_STOP = 1;
//         rtctimer->TASKS_CLEAR = 1;

//         /* Always no prescaler */
//         rtctimer->PRESCALER = 0;

//         /* Clear overflow events and set overflow interrupt */
//         rtctimer->EVENTS_OVRFLW = 0;
//         rtctimer->INTENSET = RTC_INTENSET_OVRFLW_Msk;

//         /* Start the timer */
//         rtctimer->TASKS_START = 1;

//         /* Set isr in vector table and enable interrupt */
//         NVIC_EnableIRQ(bsptimer->tmr_irq_num);

//         __HAL_ENABLE_INTERRUPTS(ctx);
//         return 0;
//     }
// #endif

//     /* Set timer to desired frequency */
//     div = NRF5340_MAX_TIMER_FREQ / freq_hz;

//     /*
//      * Largest prescaler is 2^9 and must make sure frequency not too high.
//      * If hwtimer is NULL it means that the timer was not initialized prior
//      * to call.
//      */
//     if (bsptimer->tmr_enabled || (div == 0) || (div > 512) ||
//         (bsptimer->tmr_reg == NULL)) {
//         rc = EINVAL;
//         goto err;
//     }

//     if (div == 1) {
//         prescaler = 0;
//     } else {
//         /* Find closest prescaler */
//         for (prescaler = 1; prescaler < 10; ++prescaler) {
//             if (div <= (1 << prescaler)) {
//                 min_delta = div - (1 << (prescaler - 1));
//                 max_delta = (1 << prescaler) - div;
//                 if (min_delta < max_delta) {
//                     prescaler -= 1;
//                 }
//                 break;
//             }
//         }
//     }

//     /* Now set the actual frequency */
//     bsptimer->tmr_freq = NRF5340_MAX_TIMER_FREQ / (1 << prescaler);
//     bsptimer->tmr_enabled = 1;

//     /* disable interrupts */
//     __HAL_DISABLE_INTERRUPTS(ctx);

//     /* Make sure HFXO is started */
//     if ((NRF_CLOCK_NS->HFCLKSTAT &
//          (CLOCK_HFCLKSTAT_SRC_Msk | CLOCK_HFCLKSTAT_STATE_Msk)) !=
//         (CLOCK_HFCLKSTAT_SRC_Msk | CLOCK_HFCLKSTAT_STATE_Msk)) {
//         NRF_CLOCK_NS->EVENTS_HFCLKSTARTED = 0;
//         NRF_CLOCK_NS->TASKS_HFCLKSTART = 1;
//         while (1) {
//             if ((NRF_CLOCK_NS->EVENTS_HFCLKSTARTED) != 0) {
//                 break;
//             }
//         }
//     }
//     hwtimer = bsptimer->tmr_reg;

//     /* Stop the timer first */
//     hwtimer->TASKS_STOP = 1;
//     hwtimer->TASKS_CLEAR = 1;

//     /* Put the timer in timer mode using 32 bits. */
//     hwtimer->MODE = TIMER_MODE_MODE_Timer;
//     hwtimer->BITMODE = TIMER_BITMODE_BITMODE_32Bit;

//     /* Set the pre-scalar */
//     hwtimer->PRESCALER = prescaler;

//     /* Start the timer */
//     hwtimer->TASKS_START = 1;

//     NVIC_EnableIRQ(bsptimer->tmr_irq_num);

//     __HAL_ENABLE_INTERRUPTS(ctx);

    return 0;

// err:
//     return rc;
}

int
hal_timer_deinit(int timer_num)
{
    int rc;
    uint32_t ctx;
    struct nrf54h20_hal_timer *bsptimer;
    NRF_TIMER_Type *hwtimer;
    NRF_RTC_Type *rtctimer;

//     rc = 0;
//     nrf54h20_hal_timer_RESOLVE(timer_num, bsptimer);

//     __HAL_DISABLE_INTERRUPTS(ctx);
//     if (bsptimer->tmr_rtc) {
//         rtctimer = (NRF_RTC_Type *)bsptimer->tmr_reg;
//         rtctimer->INTENCLR = NRF_TIMER_INT_MASK(NRF_RTC_TIMER_CC_INT);
//         rtctimer->TASKS_STOP = 1;
//     } else {
//         hwtimer = (NRF_TIMER_Type *)bsptimer->tmr_reg;
//         hwtimer->INTENCLR = NRF_TIMER_INT_MASK(NRF_TIMER_CC_INT);
//         hwtimer->TASKS_SHUTDOWN = 1;
//     }
//     bsptimer->tmr_enabled = 0;
//     bsptimer->tmr_reg = NULL;
//     __HAL_ENABLE_INTERRUPTS(ctx);

// err:
    return 0;
}

uint32_t
hal_timer_get_resolution(int timer_num)
{
    int rc;
    uint32_t resolution;
    struct nrf54h20_hal_timer *bsptimer;

    nrf54h20_hal_timer_RESOLVE(timer_num, bsptimer);

    resolution = 1000000000 / bsptimer->tmr_freq;
    return resolution;

err:
    rc = 0;
    return rc;
}

uint32_t
hal_timer_read(int timer_num)
{
    int rc;
    uint32_t tcntr;
    struct nrf54h20_hal_timer *bsptimer;

    nrf54h20_hal_timer_RESOLVE(timer_num, bsptimer);
    if (bsptimer->tmr_rtc) {
        tcntr = hal_timer_read_bsptimer(bsptimer);
    } else {
        tcntr = nrf_read_timer_cntr(bsptimer->tmr_reg);
    }

    return tcntr;

    /* Assert here since there is no invalid return code */
err:
    assert(0);
    rc = 0;
    return rc;
}

int
hal_timer_set_cb(int timer_num, struct hal_timer *timer, hal_timer_cb cb_func,
                 void *arg)
{
    int rc;
    struct nrf54h20_hal_timer *bsptimer;

    nrf54h20_hal_timer_RESOLVE(timer_num, bsptimer);

    timer->cb_func = cb_func;
    timer->cb_arg = arg;
    timer->link.tqe_prev = NULL;
    timer->bsp_timer = bsptimer;

    rc = 0;

err:
    return rc;
}

int
hal_timer_start(struct hal_timer *timer, uint32_t ticks)
{
    int rc;
    uint32_t tick;
    struct nrf54h20_hal_timer *bsptimer;

    /* Set the tick value at which the timer should expire */
    bsptimer = (struct nrf54h20_hal_timer *)timer->bsp_timer;
    if (bsptimer->tmr_rtc) {
        tick = hal_timer_read_bsptimer(bsptimer) + ticks;
    } else {
        tick = nrf_read_timer_cntr(bsptimer->tmr_reg) + ticks;
    }
    rc = hal_timer_start_at(timer, tick);
    return rc;
}

int
hal_timer_start_at(struct hal_timer *timer, uint32_t tick)
{
    uint32_t ctx;
    struct hal_timer *entry;
    struct nrf54h20_hal_timer *bsptimer;

    if ((timer == NULL) || (timer->link.tqe_prev != NULL) ||
        (timer->cb_func == NULL)) {
        return EINVAL;
    }
    bsptimer = (struct nrf54h20_hal_timer *)timer->bsp_timer;
    timer->expiry = tick;

    __HAL_DISABLE_INTERRUPTS(ctx);

    if (TAILQ_EMPTY(&bsptimer->hal_timer_q)) {
        TAILQ_INSERT_HEAD(&bsptimer->hal_timer_q, timer, link);
    } else {
        TAILQ_FOREACH(entry, &bsptimer->hal_timer_q, link) {
            if ((int32_t)(timer->expiry - entry->expiry) < 0) {
                TAILQ_INSERT_BEFORE(entry, timer, link);
                break;
            }
        }
        if (!entry) {
            TAILQ_INSERT_TAIL(&bsptimer->hal_timer_q, timer, link);
        }
    }

    /* If this is the head, we need to set new OCMP */
    if (timer == TAILQ_FIRST(&bsptimer->hal_timer_q)) {
        nrf_timer_set_ocmp(bsptimer, timer->expiry);
    }

    __HAL_ENABLE_INTERRUPTS(ctx);

    return 0;
}

int
hal_timer_stop(struct hal_timer *timer)
{
    uint32_t ctx;
    int reset_ocmp;
    struct hal_timer *entry = NULL;
    struct nrf54h20_hal_timer *bsptimer;

    if (timer == NULL) {
        return EINVAL;
    }

    bsptimer = (struct nrf54h20_hal_timer *)timer->bsp_timer;

    __HAL_DISABLE_INTERRUPTS(ctx);

    if (timer->link.tqe_prev != NULL) {
        reset_ocmp = 0;
        if (timer == TAILQ_FIRST(&bsptimer->hal_timer_q)) {
            /* If first on queue, we will need to reset OCMP */
            entry = TAILQ_NEXT(timer, link);
            reset_ocmp = 1;
        }
        TAILQ_REMOVE(&bsptimer->hal_timer_q, timer, link);
        timer->link.tqe_prev = NULL;
        if (reset_ocmp) {
            if (entry) {
                nrf_timer_set_ocmp((struct nrf54h20_hal_timer *)entry->bsp_timer,
                                   entry->expiry);
            } else {
                if (bsptimer->tmr_rtc) {
                    nrf_rtc_disable_ocmp((NRF_RTC_Type *)bsptimer->tmr_reg);
                } else {
                    nrf_timer_disable_ocmp(bsptimer->tmr_reg);
                }
            }
        }
    }

    __HAL_ENABLE_INTERRUPTS(ctx);

    return 0;
}
