==> apache/mynewt-core/hw/mcu/nxp/lpc55xx/src/hal_timer.c <==
#include <stdlib.h>
#include <assert.h>
#include <os/mynewt.h>
#include <hal/hal_timer.h>
#include <mcu/cmsis_nvic.h>
#include <fsl_ctimer.h>
#define INC_OVERFLOW(tmr) (++(tmr->overflow_count))
#define OVERFLOW_COUNT(tmr) tmr->overflow_count
#define OVERFLOW_COUNT_RESET(tmr) tmr->overflow_count = 0
#define INC_OVERFLOW(tmr)
#define OVERFLOW_COUNT(tmr) 0
#define OVERFLOW_COUNT_RESET(tmr)
#define TIMER_CFG_DEF(n) \
    static void CTIMER ## n ## _IRQHandler(void); \
    struct ctimer_hal_tmr_cfg TIMER_ ## n ## _cfg = { \
        .base = CTIMER ## n, \
        .clock_gate = kCLOCK_Timer ## n, \
        .clock_id = kMAIN_CLK_to_CTIMER ## n, \
        .irqn = CTIMER ## n ## _IRQn, \
        .isr = CTIMER ## n ## _IRQHandler, \
    }; \
    struct ctimer_hal_tmr ctimer_hal_tmr_ ## n = { \
        .cfg = &TIMER_ ## n ## _cfg, \
    }; \
    static void CTIMER ## n ## _IRQHandler(void) \
    { \
        timer_irq_handler(&ctimer_hal_tmr_ ## n); \
    }
#define TIMER_REF(n) (MYNEWT_VAL_TIMER_ ## n) ? &ctimer_hal_tmr_ ## n : NULL,

int
hal_timer_init(int num, void *cfg)
{
    const struct ctimer_hal_tmr *tmr;
    ctimer_config_t default_config;
    IRQn_Type irqn;
    CTIMER_Type *base;

    (void)cfg;

    if (num >= FSL_FEATURE_SOC_CTIMER_COUNT || !(tmr = timers[num])) {
        return -1;
    }

    base = tmr->cfg->base;

    CLOCK_AttachClk(tmr->cfg->clock_id);
    CLOCK_EnableClock(tmr->cfg->clock_gate);
    CTIMER_GetDefaultConfig(&default_config);
    CTIMER_Init(base, &default_config);

    irqn = tmr->cfg->irqn;
    NVIC_SetPriority(irqn, (1 << __NVIC_PRIO_BITS) - 1);
    NVIC_SetVector(irqn, (uint32_t)tmr->cfg->isr);
    NVIC_EnableIRQ(irqn);
    if (MYNEWT_VAL_CTIMER_AUTO_OFF_COUNT) {
        ctimer_match_config_t match = {
            .matchValue = base->TC,
            .enableInterrupt = true,
        };
        CTIMER_SetupMatch(base, kCTIMER_Match_0, &match);

    }
    CTIMER_StartTimer(base);

    return 0;
}

int
hal_timer_deinit(int num)
{
    const struct ctimer_hal_tmr *tmr;

    if (num >= FSL_FEATURE_SOC_CTIMER_COUNT || !(tmr = timers[num])) {
        return -1;
    }

    CTIMER_Deinit(tmr->cfg->base);

    return 0;
}

int
hal_timer_config(int num, uint32_t freq_hz)
{
    struct ctimer_hal_tmr *tmr;
    ctimer_config_t timer_config;
    CTIMER_Type *base;
    os_sr_t sr;

    if (num >= FSL_FEATURE_SOC_CTIMER_COUNT || !(tmr = timers[num])) {
        return -1;
    }
    base = tmr->cfg->base;

    OS_ENTER_CRITICAL(sr);

    CTIMER_GetDefaultConfig(&timer_config);
    ctimer_tmr_config_freq(&timer_config, freq_hz);
    CTIMER_StopTimer(base);
    CTIMER_Init(base, &timer_config);
    tmr->freq = SystemCoreClock / (timer_config.prescale + 1);
    CTIMER_EnableInterrupts(base, kCTIMER_Match0InterruptEnable);
    CTIMER_StartTimer(base);

    OS_EXIT_CRITICAL(sr);

    return 0;
}

uint32_t
hal_timer_get_resolution(int num)
{
    const struct ctimer_hal_tmr *tmr;

    if (num >= FSL_FEATURE_SOC_CTIMER_COUNT || !(tmr = timers[num])) {
        return 0;
    }

    return (1000000000 / ctimer_tmr_get_freq(tmr));
}

uint32_t
hal_timer_read(int num)
{
    struct ctimer_hal_tmr *tmr;

    if (num >= FSL_FEATURE_SOC_CTIMER_COUNT || !(tmr = timers[num])) {
        return 0;
    }

    return ctimer_tmr_read(tmr);
}

int
hal_timer_set_cb(int num, struct hal_timer *timer, hal_timer_cb cb_func,
                 void *arg)
{
    const struct ctimer_hal_tmr *tmr;

    if (num >= FSL_FEATURE_SOC_CTIMER_COUNT || !(tmr = timers[num])) {
        return -1;
    }

    timer->cb_func = cb_func;
    timer->cb_arg = arg;
    timer->bsp_timer = (struct ctimer_hal_tmr *)tmr;
    timer->link.tqe_prev = NULL;

    return 0;
}

int
hal_timer_start(struct hal_timer *timer, uint32_t ticks)
{
    struct ctimer_hal_tmr *tmr;
    uint32_t tick;

    tmr = (struct ctimer_hal_tmr *)timer->bsp_timer;

    tick = ticks + CTIMER_GetTimerCountValue(tmr->cfg->base);

    return hal_timer_start_at(timer, tick);
}

int
hal_timer_start_at(struct hal_timer *timer, uint32_t tick)
{
    struct ctimer_hal_tmr *tmr;
    struct hal_timer *entry;
    CTIMER_Type *base;
    os_sr_t sr;

    if (!timer || timer->link.tqe_prev || !timer->cb_func) {
        return -1;
    }

    tmr = (struct ctimer_hal_tmr *)timer->bsp_timer;
    base = tmr->cfg->base;
    timer->expiry = tick;

    OS_ENTER_CRITICAL(sr);

    if (TAILQ_EMPTY(&tmr->hal_timer_q)) {
        TAILQ_INSERT_HEAD(&tmr->hal_timer_q, timer, link);
    } else {
        TAILQ_FOREACH(entry, &tmr->hal_timer_q, link) {
            if ((int32_t)(timer->expiry - entry->expiry) < 0) {
                TAILQ_INSERT_BEFORE(entry, timer, link);
                break;
            }
        }
        if (!entry) {
            TAILQ_INSERT_TAIL(&tmr->hal_timer_q, timer, link);
        }
    }

    if (timer == TAILQ_FIRST(&tmr->hal_timer_q)) {
        ctimer_match_config_t match = {
            .matchValue = timer->expiry,
            .enableInterrupt = true,
        };
        CTIMER_SetupMatch(base, kCTIMER_Match_0, &match);
        CTIMER_EnableResetMatchChannel(base, kCTIMER_Match_0, true);
        OVERFLOW_COUNT_RESET(tmr);
    }

    if (0 == (base->TCR & CTIMER_TCR_CEN_MASK)) {
        CTIMER_StartTimer(base);
    }

    OS_EXIT_CRITICAL(sr);

    return 0;
}

int
hal_timer_stop(struct hal_timer *timer)
{
    struct ctimer_hal_tmr *tmr;
    struct hal_timer *entry = NULL;
    bool reset_period;
    CTIMER_Type *base;
    os_sr_t sr;

    tmr = (struct ctimer_hal_tmr *)timer->bsp_timer;
    base = tmr->cfg->base;

    OS_ENTER_CRITICAL(sr);

    if (timer->link.tqe_prev != NULL) {
        reset_period = false;
        /* Is timer first in the queue? */
        if (timer == TAILQ_FIRST(&tmr->hal_timer_q)) {
            entry = TAILQ_NEXT(timer, link);
            reset_period = true;
        }
        TAILQ_REMOVE(&tmr->hal_timer_q, timer, link);
        timer->link.tqe_prev = NULL;
        if (reset_period) {
            if (entry) {
                ctimer_match_config_t match = {
                    .matchValue = entry->expiry,
                    .enableInterrupt = true,
                };
                CTIMER_SetupMatch(base, kCTIMER_Match_0, &match);
            } else {
                CTIMER_StopTimer(tmr->cfg->base);
            }
        }
    }

    OS_EXIT_CRITICAL(sr);

    return 0;
}
